header img fixed at 320px, content spacing adjustments

--- a/css/index.css
+++ b/css/index.css
@@ -223,7 +223,7 @@ header {
   }
 }
 header .logo {
-  font-size: 24px;
+  font-size: 2.4rem;
   font-weight: bold;
   color: #fff;
   margin: 1px 0 0 27px;
@@ -232,13 +232,18 @@ header .logo {
 }
 @media (max-width:500px) {
   header .logo {
-    font-size: 2.1rem;
+    margin-left: 0;
   }
 }
 header .hamburger {
   margin: 3px 26px 0 0;
   height: 21px;
   cursor: pointer;
+}
+@media (max-width:500px) {
+  header .hamburger {
+    margin-right: 0;
+  }
 }
 header .hamburger-close {
   display: none;
@@ -320,6 +325,7 @@ footer .footer__top {
   footer .footer__top h4 {
     font-size: 2rem;
     line-height: 28px;
+    margin-bottom: 0;
   }
 }
 footer .footer__top input[type="email"] {
@@ -335,7 +341,7 @@ footer .footer__top input[type="email"] {
   footer .footer__top input[type="email"] {
     font-size: 1.6rem;
     padding: 13px 5px;
-    margin-top: 3px;
+    margin: 14px 0 8px 0px;
   }
 }
 footer .footer__top p {
@@ -364,7 +370,7 @@ footer .footer__locations address {
 }
 @media (max-width:500px) {
   footer .footer__locations {
-    margin: 10px 0 0;
+    margin: 16px 0 0;
     font-size: 1.4rem;
   }
 }
@@ -378,7 +384,7 @@ footer p {
     text-align: left;
     width: 90%;
     margin: 0 auto;
-    margin-top: 20px;
+    margin-top: 25px;
   }
 }
 body {
@@ -389,14 +395,15 @@ body .header__content {
   background-image: url("../img/home/home-jumbotron.png");
   height: 598px;
   position: relative;
+  background-position: center;
 }
 @media (max-width:500px) {
   body .header__content {
     background-image: url("../img/home/home-mobile-jumbotron.png");
     background-repeat: no-repeat;
     background-size: cover;
-    background-position-y: -115px;
-    height: 213px;
+    background-position: center;
+    height: 260px;
   }
 }
 body .header__content h1 {
@@ -408,7 +415,7 @@ body .header__content h1 {
 @media (max-width:500px) {
   body .header__content h1 {
     left: 16px;
-    top: 64px;
+    top: 111px;
     font-size: 3.4rem;
     line-height: 42px;
     letter-spacing: 1px;
@@ -470,8 +477,18 @@ body .about .about__content .about__text {
     margin-top: 30px;
   }
 }
+@media (max-width:500px) {
+  body .about .about__content .about__text h2 {
+    margin-top: 0;
+  }
+}
 body .about .about__content .about__text p {
   margin: 25px 0;
+}
+@media (max-width:500px) {
+  body .about .about__content .about__text p {
+    margin: 20px 0;
+  }
 }
 body .projects {
   margin: 60px 8.333%;
@@ -488,6 +505,7 @@ body .projects h2 {
 @media (max-width:500px) {
   body .projects h2 {
     padding-left: 5%;
+    margin-bottom: 25px;
   }
 }
 body .projects .projects__content {
@@ -540,7 +558,7 @@ body .projects .projects__content .projects__header h3 {
 @media (max-width:500px) {
   body .projects .projects__content .projects__header h3 {
     margin: 0 auto;
-    bottom: -85px;
+    bottom: -80px;
     width: 90%;
     right: 0;
     left: 0;
