--- a/less/footer.less
+++ b/less/footer.less
@@ -26,6 +26,7 @@ footer {
       @media @phone {
         font-size: 2rem;
         line-height: 28px;
+        margin-bottom: 0;
       }
     }
 
@@ -41,7 +42,7 @@ footer {
       @media @phone {
         font-size: 1.6rem;
         padding: 13px 5px;
-        margin-top: 3px;
+        margin: 14px 0 8px 0px;
       }
     }
 
@@ -72,7 +73,7 @@ footer {
     }
 
     @media @phone {
-      margin: 10px 0 0;
+      margin: 16px 0 0;
       font-size: 1.4rem;
     }
   }
@@ -86,7 +87,7 @@ footer {
       text-align: left;
       width: 90%;
       .center();
-      margin-top: 20px;
+      margin-top: 25px;
     }
   }
 }
