--- a/less/home-page.less
+++ b/less/home-page.less
@@ -6,13 +6,15 @@ body {
     background-image: url("../img/home/home-jumbotron.png");
     height: 598px;
     position: relative;
+    background-position: center;
 
     @media @phone {
       background-image: url("../img/home/home-mobile-jumbotron.png");
       background-repeat: no-repeat;
       background-size: cover;
-      background-position-y: -115px;
-      height: 213px;
+      // background-position-y: -115px;
+      background-position: center;
+      height: 260px;
     }
 
     h1 {
@@ -23,7 +25,7 @@ body {
 
       @media @phone {
         left: 16px;
-        top: 64px;
+        top: 111px;
         font-size: 3.4rem;
         line-height: 42px;
         letter-spacing: 1px;
@@ -78,8 +80,16 @@ body {
           margin-top: 30px;
         }
 
+        h2 {
+          @media @phone {
+            margin-top: 0;
+          }
+        }
         p {
           margin: 25px 0;
+          @media @phone {
+            margin: 20px 0;
+          }
         }
 
         // .btn {
@@ -119,6 +129,7 @@ body {
 
       @media @phone {
         padding-left: 5%;
+        margin-bottom: 25px;
       }
     }
 
@@ -165,7 +176,7 @@ body {
 
           @media @phone {
             .center();
-            bottom: -85px;
+            bottom: -80px;
             width: 90%;
             right: 0;
             left: 0;
