--- a/less/navigation.less
+++ b/less/navigation.less
@@ -13,7 +13,7 @@ header {
     letter-spacing: 2.5px;
   }
   .logo {
-    font-size: 24px;
+    font-size: 2.4rem;
     font-weight: bold;
     color: @white;
     margin: 1px 0 0 27px;
@@ -21,7 +21,7 @@ header {
     letter-spacing: 0px;
 
     @media @phone {
-      font-size: 2.1rem;
+      margin-left: 0;
     }
   }
 
@@ -29,6 +29,10 @@ header {
     margin: 3px 26px 0 0;
     height: 21px;
     cursor: pointer;
+
+    @media @phone {
+      margin-right: 0;
+    }
   }
 
   .hamburger-close {
